# Make-24

./: .gitignore  CNAME  README.md  compute_24.c  makefile  solution.txt  solution2.txt
data/: game24.in  game24.res  game24_2.res  game24_3.txt  input.txt  solution3.txt  solution4.txt  solution_full.txt  solution_partial.txt
exec/: compute_24
src/: .clang-format  CMakeLists.txt  compute_24.c  game24.cc  game24_2.cc  generate.py  make_24.c  make_24.cc  makefile  pnts24.c
